fix(tooltip): deduplicate high contrast color vars

--- a/components/tooltip/index.css
+++ b/components/tooltip/index.css
@@ -107,11 +107,11 @@
 
 /****** Variants ******/
 .spectrum-Tooltip--info {
-	background-color: var(--highcontrast-tooltip-background-color-informative, var(--mod-tooltip-background-color-informative, var(--spectrum-tooltip-background-color-informative)));
+	background-color: var(--highcontrast-tooltip-background-color-default, var(--mod-tooltip-background-color-informative, var(--spectrum-tooltip-background-color-informative)));
 }
 
 .spectrum-Tooltip--negative {
-	background-color: var(--highcontrast-tooltip-background-color-negative, var(--mod-tooltip-background-color-negative, var(--spectrum-tooltip-background-color-negative)));
+	background-color: var(--highcontrast-tooltip-background-color-default, var(--mod-tooltip-background-color-negative, var(--spectrum-tooltip-background-color-negative)));
 }
 
 .spectrum-Tooltip.is-open {
@@ -138,11 +138,11 @@
 	border-radius: 0 0 0 var(--mod-tooltip-tip-corner-radius, var(--spectrum-tooltip-tip-corner-radius));
 
 	.spectrum-Tooltip--info & {
-		background-color: var(--highcontrast-tooltip-background-color-informative, var(--mod-tooltip-background-color-informative, var(--spectrum-tooltip-background-color-informative)));
+		background-color: var(--highcontrast-tooltip-background-color-default, var(--mod-tooltip-background-color-informative, var(--spectrum-tooltip-background-color-informative)));
 	}
 
 	.spectrum-Tooltip--negative & {
-		background-color: var(--highcontrast-tooltip-background-color-negative, var(--mod-tooltip-background-color-negative, var(--spectrum-tooltip-background-color-negative)));
+		background-color: var(--highcontrast-tooltip-background-color-default, var(--mod-tooltip-background-color-negative, var(--spectrum-tooltip-background-color-negative)));
 	}
 
 	/*** Tip Placement ***/
@@ -602,7 +602,5 @@
 
 	.spectrum-Tooltip-tip {
 		--highcontrast-tooltip-background-color-default: CanvasText;
-		--highcontrast-tooltip-background-color-informative: CanvasText;
-		--highcontrast-tooltip-background-color-negative: CanvasText;
 	}
 }
